Changelog
=========

1.1 (unreleased)
----------------

- Added option to specify the user under which run-control scripts start
  processes.
  [buchi]


1.0.1 (2012-03-12)
------------------

- Fixed handling of logrotate options containing whitespaces.
  [buchi]


1.0 (2012-03-12)
----------------

- Initial release.
  [buchi]